--- a/libs/ui/src/lib/list/buttons/list-filter-buttons.component.scss
+++ b/libs/ui/src/lib/list/buttons/list-filter-buttons.component.scss
@@ -4,7 +4,7 @@
     padding: 14px 24px;
     button {
       margin: 0px 8px;  
-      &.saveActive {
+      &.active {
         background-color: #001EC7;
       }
     } 
