--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.html
@@ -27,7 +27,7 @@
         <ng-container *ngIf="totalIncome.EUR"> {{ totalIncome.EUR | currency:'EUR' }} </ng-container>
         <ng-container *ngIf="!totalIncome.USD && !totalIncome.EUR"> - </ng-container>
       </ng-template>
-      <ng-template colRef="id" label="actions" let-id>
+      <ng-template colRef="id" label="actions" let-id sticky>
         <div fxLayout fxLayoutGap="16px" *ngIf="queryParams$ | async as queryParams">
           <a mat-icon-button [routerLink]="[id,'map']" [queryParams]="queryParams">
             <mat-icon svgIcon="territories_avails" matTooltip="Map View"></mat-icon>
