--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -79,7 +79,7 @@
 
   <ng-container *ngIf="hasInvitations$ | async">
     <article>
-      <h3>Screenings Buyer has participated</h3>
+      <h3>Screenings Buyer has participated in</h3>
       <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
     </article>
 
