--- a/libs/ui/src/lib/layout/marketplace/marketplace.component.html
+++ b/libs/ui/src/lib/layout/marketplace/marketplace.component.html
@@ -1,64 +1,58 @@
-<mat-sidenav-container>
-  <mat-sidenav class="dark-theme" id="dashboard-navbar" mode="over">
-    <mat-toolbar fxLayout fxLayoutAlign="space-between center">
-      <a app-logo routerLink="."></a>
-      <button mat-icon-button (click)="sidenav.close()">
-        <mat-icon svgIcon="arrow_back"></mat-icon>
+<aside [ngClass]="{ closed: !showNavigation }">
+  <mat-toolbar>
+    <a app-logo routerLink="." [ngClass]="{ hide: !showNavigation}"></a>
+    <a app-logo-icon routerLink="." [ngClass]="{ hide: showNavigation}"></a>
+  </mat-toolbar>
+  <ng-content select="marketplace-aside" ></ng-content>
+</aside>
+
+<div id="marketplace-content" fxLayout="column" [appContainer]="app" (toggle)="openNavigation()">
+  <!-- TOOLBAR -->
+  <app-bar #app>
+    <header fxLayout fxLayoutAlign="space-between center">
+      <button test-id="menu" mat-icon-button (click)="openNavigation()">
+        <mat-icon svgIcon="menu"></mat-icon>
       </button>
-    </mat-toolbar>
-    <ng-content select="aside"></ng-content>
-  </mat-sidenav>
-
-  <mat-sidenav-content fxLayout="column" [appContainer]="app" (toggle)="sidenav.toggle()">
-    <!-- TOOLBAR -->
-    <app-bar #app>
-      <header fxLayout fxLayoutAlign="start center">
-        <button test-id="menu" mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon svgIcon="menu"></mat-icon>
-        </button>
-        <button app-logo (click)="onAppLogoClick()"></button>
-        <ng-content select="header"></ng-content>
-        <a fxHide.xs test-id="heart-icon" mat-icon-button routerLink="wishlist" matTooltip="Wishlist">
-          <mat-icon svgIcon="favorite"
-            [matBadge]="wishlistCount$ | async"
-            [matBadgeHidden]="(wishlistCount$ | async) === 0"
-            matBadgeColor="accent"
-            matBadgeSize="small">
-          </mat-icon>
+      <ng-content select="header"></ng-content>
+      <a fxHide.xs test-id="heart-icon" mat-icon-button routerLink="wishlist" matTooltip="Wishlist">
+        <mat-icon svgIcon="favorite"
+          [matBadge]="wishlistCount$ | async"
+          [matBadgeHidden]="(wishlistCount$ | async) === 0"
+          matBadgeColor="accent"
+          matBadgeSize="small">
+        </mat-icon>
+      </a>
+      <div fxLayout="row" fxLayoutGap="24px">
+        <mat-divider fxHide.xs vertical></mat-divider>
+        <!-- Invitations -->
+        <a mat-icon-button routerLink="invitations" test-id="invitations-link" matTooltip="Invitations">
+          <ng-container *ngIf="invitationCount$ | async as count; else noInvitation">
+            <mat-icon svgIcon="invitation" [matBadge]="count" matBadgeColor="accent" matBadgeSize="small"></mat-icon>
+          </ng-container>
+          <ng-template #noInvitation>
+            <mat-icon svgIcon="invitation"></mat-icon>
+          </ng-template>
         </a>
-        <div fxLayout="row" fxLayoutGap="24px">
-          <mat-divider fxHide.xs vertical></mat-divider>
-          <!-- Invitations -->
-          <a mat-icon-button routerLink="invitations" test-id="invitations-link" matTooltip="Invitations">
-            <ng-container *ngIf="invitationCount$ | async as count; else noInvitation">
-              <mat-icon svgIcon="invitation" [matBadge]="count" matBadgeColor="accent" matBadgeSize="small"></mat-icon>
-            </ng-container>
-            <ng-template #noInvitation>
-              <mat-icon svgIcon="invitation"></mat-icon>
-            </ng-template>
-          </a>
-          <!-- Notifications -->
-          <a mat-icon-button routerLink="notifications" test-id="notifications-link" matTooltip="Notifications">
-            <ng-container *ngIf="notificationCount$ | async as count; else noNotification">
-              <mat-icon svgIcon="notifications" [matBadge]="count" matBadgeColor="accent" matBadgeSize="small">
-              </mat-icon>
-            </ng-container>
-            <ng-template #noNotification>
-              <mat-icon svgIcon="notifications"></mat-icon>
-            </ng-template>
-          </a>
-          <auth-widget fxHide.xs></auth-widget>
-        </div>
-      </header>
-    </app-bar>
-
-    <!-- CONTENT -->
-    <main fxFlex cdkScrollable>
-      <div class="page" [@routeAnimation]="animationOutlet(outlet)">
-        <router-outlet #outlet="outlet" (activate)="scrollToTop()"></router-outlet>
+        <!-- Notifications -->
+        <a mat-icon-button routerLink="notifications" test-id="notifications-link" matTooltip="Notifications">
+          <ng-container *ngIf="notificationCount$ | async as count; else noNotification">
+            <mat-icon svgIcon="notifications" [matBadge]="count" matBadgeColor="accent" matBadgeSize="small">
+            </mat-icon>
+          </ng-container>
+          <ng-template #noNotification>
+            <mat-icon svgIcon="notifications"></mat-icon>
+          </ng-template>
+        </a>
+        <auth-widget fxHide.xs></auth-widget>
       </div>
-      <bf-footer></bf-footer>
-    </main>
+    </header>
+  </app-bar>
 
-  </mat-sidenav-content>
-</mat-sidenav-container>
+  <!-- CONTENT -->
+  <main fxFlex cdkScrollable>
+    <div class="page" [@routeAnimation]="animationOutlet(outlet)">
+      <router-outlet #outlet="outlet" (activate)="scrollToTop()"></router-outlet>
+    </div>
+    <bf-footer></bf-footer>
+  </main>
+</div>
