Add marketplace part, cleaning of fxlayout

--- a/apps/festival/festival/src/app/marketplace/layout/aside/aside.component.html
+++ b/apps/festival/festival/src/app/marketplace/layout/aside/aside.component.html
@@ -30,7 +30,5 @@
       <span matLine><b>My Dashboard</b></span>
     </a>
   </ng-container>
-  <auth-sidenav fxHide.gt-xs></auth-sidenav>
+  <auth-sidenav></auth-sidenav>
 </mat-nav-list>
-
-<auth-sidenav-widget fxHide.gt-xs></auth-sidenav-widget>
