--- a/apps/festival/festival/src/app/marketplace/marketplace.component.html
+++ b/apps/festival/festival/src/app/marketplace/marketplace.component.html
@@ -1,14 +1,14 @@
 <layout-marketplace>
   <marketplace-aside></marketplace-aside>
 
-  <header fxFlex fxLayout fxLayoutAlign="end center" class="marketplace-header">
+  <header class="marketplace-header">
 
-    <div fxLayoutAlign="center center" fxLayoutGap="24px">
-      <a fxHide.xs mat-button class="link-to-app" color="primary" [href]="applicationUrl.catalog" target="_blank">        
+    <div>
+      <a mat-button class="link-to-app" color="primary" [href]="applicationUrl.catalog" target="_blank">        
         <mat-icon svgIcon="mini_logo_catalog"></mat-icon>
         <span>Buy Content</span>
       </a>
-      <a fxHide.xs test-id="calendar-icon" mat-icon-button routerLink="event/calendar" matTooltip="My Calendar">
+      <a test-id="calendar-icon" mat-icon-button routerLink="event/calendar" matTooltip="My Calendar">
         <mat-icon svgIcon="calendar_today"></mat-icon>
       </a>
     </div>
