Save Filter Research (#8762)
* ok

* ok

* Catalog - create save/load filters

* add icon save 'active'

* create logic for save button active

* added background color to active save

* quick fix

* Festival - add save/load research

* add 'cdr'

* Financier - add save/load research

* add enabled state on save button

* quick fix

* center 'clear filters'

* remove class 'saveLoad'

* align buton 'clear filters'

* remove unused CSS

* remove class 'translucent'

* remove extra lines

* add types

* remove 'console.log' and add ' ; '

* remove useless sub

* add a name research

* implement AfterViewInit

* create and use function 'saveParamsToStorage'

* refactoring function 'load' on festival and financier

* create and use function 'loadParamsFromStorage'

* remove unused imports

* remove '!important'

* Create buttons states

* remove useless code

* remove it

* remove useless code

* Create function 'activeUnactiveButtons' and use it

* rename 'activeUnactiveButtons' to 'setButtonsState'

* rename each name research by 'saved-search'

* move functions 'saveParamsToStorage', 'loadParamsFromStorage'

* remove useless code

* remove extra lines

* replacement of buttons

* Create component 'list-filter-buttons'

* Catalog - use new component

* Festival - use new component

* Financiers - use new component

* remove unused import

* remove extra lines

* move 'savedSearchIdentifier' inside the class

* small update

* fix review

* put back align-items: center;

* create responsive save/load

* remove button 'clears filters'

* add missing padding-bottom

* fix problem line

* fix review

* debug and typing

* put back position

* debug empty date

* remove margin-left

* remove margin-left

* cleaning

* typo

* test

* revert

* commented all catalog skiped tests

* another test

* test

* revert

Co-authored-by: kevin-m <kmar

--- a/libs/ui/src/lib/list/filter/list-filter.component.scss
+++ b/libs/ui/src/lib/list/filter/list-filter.component.scss
@@ -1,9 +1,12 @@
+@import '@angular/flex-layout/mq';
+
 ::-webkit-scrollbar {
   height: 5px;
 }
 
 :host {
   width: 100%;
+  display: flex;
 
   /* Firefox scrollbar */
   section {
@@ -15,10 +18,10 @@ section {
   width: 100%;
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
   overflow: auto;
   overflow-y: hidden;
   white-space: nowrap;
+  align-items: center;
 }
 
 mat-card {
@@ -42,5 +45,14 @@ button.filter {
   &.primary {
     border-color: var(--primary);
     color: var(--primary);
+  }
+}
+
+@include layout-bp(lt-sm) {
+  :host {
+    flex-direction: column;
+  }
+  section {
+    padding-bottom: 8px;
   }
 }
