--- a/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/list/list.component.html
@@ -8,13 +8,11 @@
     </form>
   </list-page-app-bar>
 
-
   <list-page-title>
     <h1 class="mat-display-2 page-title">Library</h1>
   </list-page-title>
 
   <!-- SEARCH BAR -->
-
   <list-page-search>
     <form [formGroup]="searchForm">
       <mat-form-field appearance="outline">
@@ -60,7 +58,9 @@
       <filter-running-time [form]="searchForm.runningTime"></filter-running-time>
     </ng-template>
 
-    <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
+    <list-filter-buttons (data)="load($event)"></list-filter-buttons>
+
+    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
     </button>
