--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.html
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.html
@@ -59,7 +59,9 @@
       <filter-budget fxLayout="column" [form]="searchForm.minBudget"></filter-budget>
     </ng-template>
 
-    <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
+    <list-filter-buttons (data)="load($event)"></list-filter-buttons>
+  
+    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
     </button>
