--- a/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/title/list/list.component.html
@@ -13,7 +13,6 @@
   </list-page-title>
 
   <!-- SEARCH BAR -->
-
   <list-page-search>
     <form [formGroup]="searchForm">
       <mat-form-field appearance="outline">
@@ -62,7 +61,9 @@
       <filter-budget fxLayout="column" [form]="searchForm.minBudget"></filter-budget>
     </ng-template>
 
-    <button mat-button class="refresh translucent" (click)="clear()" matTooltip="Clear all filters">
+    <list-filter-buttons (data)="load($event)"></list-filter-buttons>
+
+    <button mat-button class="refresh" (click)="clear()" matTooltip="Clear all filters">
       <mat-icon svgIcon="refresh_filters"></mat-icon>
       <span>Clear Filters</span>
     </button>
