fix org card number of movies and members

--- a/libs/organization/src/lib/organization/components/card/card.component.html
+++ b/libs/organization/src/lib/organization/components/card/card.component.html
@@ -18,8 +18,8 @@
     </ng-template>
     <div>
       <p class="mat-caption">{{ (org.addresses.main.country | toLabel: 'territories') || "-" }}</p>
-      <p class="mat-caption" i18n *ngIf="(orgMovieCount$ | async) as count">
-        {{ count }} film{ count, plural, =1 {} other {s} } in {{ app === 'catalog' ? 'catalog' : 'line-up' }}
+      <p class="mat-caption" i18n *ngIf="orgMovieCount">
+        {{ orgMovieCount }} film{ orgMovieCount, plural, =1 {} other {s} } in {{ app === 'catalog' ? 'catalog' : 'line-up' }}
       </p>
       <p class="mat-caption" i18n *ngIf="memberCount !== 0">
         {{ memberCount }} employee{ memberCount, plural, =1 {} other {s} }
