Update style, add closeNavigation function, fix space on mobile

--- a/libs/ui/src/lib/layout/dashboard/dashboard.component.html
+++ b/libs/ui/src/lib/layout/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="bg-navigation" [ngClass]="{ hide: !showNavigation }" (click)="toggleNavigation()"></div>
+<div class="bg-navigation" [ngClass]="{ hide: !showNavigation }" (click)="closeNavigation()"></div>
 <aside [ngClass]="{ opened: showNavigation }">
   <mat-toolbar>
     <a app-logo routerLink="."></a>
