Fix space on marketplace mobile

--- a/apps/festival/festival/src/app/marketplace/marketplace.component.scss
+++ b/apps/festival/festival/src/app/marketplace/marketplace.component.scss
@@ -38,8 +38,10 @@ header {
 
 @include layout-bp(xs) {
   .link-to-app,
-  a[mat-button],
   a[mat-button-icon] {
     display: none;
+  }
+  header {
+    margin: 0;
   }
 }
