--- a/libs/ui/src/lib/layout/marketplace/marketplace.component.scss
+++ b/libs/ui/src/lib/layout/marketplace/marketplace.component.scss
@@ -119,7 +119,7 @@ a[app-logo] {
   mat-divider,
   auth-widget,
   a[app-logo-icon],
-  a[mat-icon-button] {
+  header > a[mat-icon-button] {
     display: none;
   }
 
