--- a/apps/financiers/financiers/src/app/marketplace/marketplace.component.html
+++ b/apps/financiers/financiers/src/app/marketplace/marketplace.component.html
@@ -1,35 +1,31 @@
 <layout-marketplace>
-  <aside>
-    <mat-nav-list>
-      <a mat-list-item routerLink="home" routerLinkActive="active">
-        <mat-icon mat-list-icon svgIcon="home"></mat-icon>
-        <span mat-line><b>Home</b></span>
+  <mat-nav-list>
+    <a mat-list-item routerLink="home" routerLinkActive="active">
+      <mat-icon mat-list-icon svgIcon="home"></mat-icon>
+      <span mat-line><b>Home</b></span>
+    </a>
+    <a test-id="library" mat-list-item routerLink="title" routerLinkActive="active">
+      <mat-icon mat-list-icon svgIcon="video_library"></mat-icon>
+      <span mat-line><b>Projects</b></span>
+    </a>
+    <a test-id="sellers" mat-list-item routerLink="organization" routerLinkActive="active">
+      <mat-icon mat-list-icon svgIcon="sellers"></mat-icon>
+      <span mat-line><b>Partners</b></span>
+    </a>
+    <a mat-list-item routerLink="wishlist" routerLinkActive="active">
+      <mat-icon mat-list-icon svgIcon="favorite"></mat-icon>
+      <span mat-line><b>Wishlist</b></span>
+    </a>
+    <ng-container *ngIf="org$ | async | canAccess: 'dashboard':'financiers'">
+      <mat-divider></mat-divider>
+      <a mat-list-item routerLink="/c/o/dashboard/home" routerLinkActive="active">
+        <mat-icon matListIcon svgIcon="dashboard"></mat-icon>
+        <span matLine><b>My Dashboard</b></span>
       </a>
-      <a test-id="library" mat-list-item routerLink="title" routerLinkActive="active">
-        <mat-icon mat-list-icon svgIcon="video_library"></mat-icon>
-        <span mat-line><b>Projects</b></span>
-      </a>
-      <a test-id="sellers" mat-list-item routerLink="organization" routerLinkActive="active">
-        <mat-icon mat-list-icon svgIcon="sellers"></mat-icon>
-        <span mat-line><b>Partners</b></span>
-      </a>
-      <a mat-list-item routerLink="wishlist" routerLinkActive="active">
-        <mat-icon mat-list-icon svgIcon="favorite"></mat-icon>
-        <span mat-line><b>Wishlist</b></span>
-      </a>
-      <ng-container *ngIf="org$ | async | canAccess: 'dashboard':'financiers'">
-        <mat-divider></mat-divider>
-        <a mat-list-item routerLink="/c/o/dashboard/home" routerLinkActive="active">
-          <mat-icon matListIcon svgIcon="dashboard"></mat-icon>
-          <span matLine><b>My Dashboard</b></span>
-        </a>
-      </ng-container>
-      <auth-sidenav fxHide.gt-xs></auth-sidenav>
-    </mat-nav-list>
+    </ng-container>
+    <auth-sidenav></auth-sidenav>
+  </mat-nav-list>
 
-    <auth-sidenav-widget fxHide.gt-xs></auth-sidenav-widget>
-  </aside>
-
-  <header fxFlex></header>
+  <header></header>
   
 </layout-marketplace>
