--- a/apps/financiers/financiers/src/app/marketplace/marketplace.component.scss
+++ b/apps/financiers/financiers/src/app/marketplace/marketplace.component.scss
@@ -1,4 +1,28 @@
-:host {
-  display: block;
-  height: 100%;
+@import "@angular/flex-layout/mq";
+
+layout-marketplace {
+  aside {
+    @include layout-bp(gt-xs) {
+      &:not(.opened) auth-sidenav,
+      &.opened auth-sidenav {
+        display: none;
+      }
+  
+      &:not(.opened) {
+        .mat-list-base .mat-list-item .mat-list-text {
+          display: none;
+        }
+      }
+    }
+  }
+
+  header {
+    flex: 1;
+  }
+
+  @include layout-bp(xs) {
+    header header {
+      margin-inline: 0;
+    }
+  }
 }
