--- a/apps/crm/crm/src/app/crm/pages/import/import.component.html
+++ b/apps/crm/crm/src/app/crm/pages/import/import.component.html
@@ -11,6 +11,9 @@
   <a mat-button routerLink="contracts" routerLinkActive="mat-primary">
     <mat-icon svgIcon="document"></mat-icon><span matLine>Contracts</span>
   </a>
+  <a mat-button routerLink="imdb" routerLinkActive="mat-primary">
+    <mat-icon svgIcon="movie"></mat-icon><span matLine>Imdb</span>
+  </a>
 
   <router-outlet></router-outlet>
 </main>
