org ressources on crm bug

--- a/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organization/organization.component.html
@@ -90,7 +90,7 @@
     <mat-card class="file-explorer">
       <mat-card-title>Organization's resources</mat-card-title>
       <mat-card-content>
-        <file-explorer [org]="org"></file-explorer>
+        <file-explorer [org]="org" isCrm></file-explorer>
       </mat-card-content>
     </mat-card>
   </main>
