--- a/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.scss
+++ b/apps/catalog/catalog/src/app/dashboard/avails/list/list.component.scss
@@ -6,8 +6,11 @@
 header{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   margin-bottom: 8px;
+  align-items: center;
+  h2 {
+    margin-right: auto;
+  }
 }
 
 h2,section{
