--- a/apps/catalog/catalog/src/app/dashboard/avails/manage/manage.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/avails/manage/manage.component.html
@@ -1,6 +1,6 @@
-<a class="arrow_back" mat-icon-button (click)="goBack()">
+<button class="arrow_back" mat-icon-button (click)="goBack()">
   <mat-icon svgIcon="arrow_back" matTooltip="Go back"></mat-icon>
-</a>
+</button>
 
 <term-form [titleId]="titleId$ | async" [backUrl]="['/c/o/dashboard/avails']">
   <p>
