--- a/libs/invitation/src/lib/invitation.component.html
+++ b/libs/invitation/src/lib/invitation.component.html
@@ -38,7 +38,7 @@
 
 <ng-template #loading>
   <article fxLayout="column" fxLayoutAlign="center center">
-    <mat-spinner color="primary"></mat-spinner>
+    <logo-spinner></logo-spinner>
   </article>
 </ng-template>
 <ng-template #empty>
